itinerary scrollbar and small bugfixes

--- a/css/index.css
+++ b/css/index.css
@@ -75,19 +75,27 @@ ul{
 .sideMenu_body{
     padding-right: 5%;
     padding-left: 5%;
+
+}
+
+.hiddenScroll{
     overflow: scroll;
     /* https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp */
     /* Hide scrollbar for IE, Edge, and Firefox */
     -ms-overflow-style: none;
     scrollbar-width: none; /* This line works, despite your IDE possibly giving warnings */
 }
-/* https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp */
-/* Hide scrollbar for Chrome, Safari, and Opera */
-.sideMenu_body::-webkit-scrollbar{
+
+.hiddenScroll::-webkit-scrollbar{
+    /* https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp */
+    /* Hide scrollbar for Chrome, Safari, and Opera */
     display: none;
 }
 
 .title{
+    font-family: var(--font-sideMenu-title);
+    font-size: var(--font-size-sideMenu-title);
+    font-weight: bold;
     background-color: var(--color-main);
     color: var(--color-on-main);
     height: 10%;
@@ -120,11 +128,6 @@ ul{
  */
 #departure_body{
     height: 90%;
-}
-#departure_title{
-    font-family: var(--font-sideMenu-title);
-    font-size: var(--font-size-sideMenu-title);
-    font-weight: bold;
 }
 
 #info{
@@ -159,12 +162,20 @@ ul{
     display: none;
 }
 #itinerary_body{
-    height: 40%;
+    max-height: calc(79.5% - 20*var(--font-size-itinerary-text));
 }
-#itinerary_title{
-    font-family: var(--font-sideMenu-title);
-    font-size: var(--font-size-sideMenu-title);
-    font-weight: bold;
+
+#itinerary_body_editable{
+    overflow: hidden;
+}
+
+#itinerary_body_editable_destinations{
+    height: calc(89.5% - 3*var(--font-size-itinerary-text));
+}
+
+#itinerary_footer{
+    height: 10.5%;
+    bottom: 0;
 }
 
 #topBar{
